file handling done

--- a/python/2-inbuilt-data-structures/code.ipynb
+++ b/python/2-inbuilt-data-structures/code.ipynb
@@ -846,6 +846,745 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionaries\n",
+    "\n",
+    "* Unordered Collections of items\n",
+    "* Key must be immutable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## creating dictionaries\n",
+    "\n",
+    "my_dict = {}\n",
+    "type(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'hardik', 'age': 21}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student = {\n",
+    "    \n",
+    "    \"name\" : \"hardik\",\n",
+    "    \"age\" : 21\n",
+    "}\n",
+    "\n",
+    "student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hardik'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'sex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mstudent\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msex\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'sex'"
+     ]
+    }
+   ],
+   "source": [
+    "student['sex']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student.get('sex'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "male\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student.get('sex', 'male'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del student['age']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'hardik'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student['age'] = 21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name', 'age'])\n",
+      "dict_values(['hardik', 21])\n",
+      "dict_items([('name', 'hardik'), ('age', 21)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys = student.keys()\n",
+    "print(keys)\n",
+    "values = student.values()\n",
+    "print(values)\n",
+    "\n",
+    "items = student.items()\n",
+    "print(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'hardik', 'age': 21} {'name': 'Kaneki', 'age': 21}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## shallow copy\n",
+    "\n",
+    "student_copy = student.copy()\n",
+    "student_copy['name'] = 'Kaneki'\n",
+    "print(student, student_copy)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name : hardik\n",
+      "age : 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "## iterating over dictionaries\n",
+    "\n",
+    "for key, value in student.items() : \n",
+    "    print(key, value , sep=' : ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "age\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in student:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hardik\n",
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in student.values(): \n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dictionary comprehension\n",
+    "\n",
+    "dict = {i : i*i for i in range(1,6)}\n",
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: 4, 4: 16, 6: 36, 8: 64, 10: 100}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# conditional dictionary comprehension\n",
+    "\n",
+    "evens = {x : x**2 for x in range(1,11) if not (x & 1)}\n",
+    "evens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 3, 'c': 4}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# merge 2 dictionaries into 1 \n",
+    "\n",
+    "dict1 = {'a' : 1, 'b' : 2}\n",
+    "dict2 = {'b' : 3, 'c' : 4}\n",
+    "merged = {**dict1, **dict2}  # unpack the dicts\n",
+    "\n",
+    "merged\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum(a, b) :\n",
+    "    \"\"\" Adds two numbers \"\"\"\n",
+    "    return a + b\n",
+    "\n",
+    "print(sum(1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Hardik\n"
+     ]
+    }
+   ],
+   "source": [
+    "# default parameters\n",
+    "\n",
+    "def greet(name = \"Hardik\") : \n",
+    "    print(f\"Hello {name}\")\n",
+    "    \n",
+    "greet()     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# variable length arguments\n",
+    "\n",
+    "## positional and keywords arguments\n",
+    "\n",
+    "def print_numbers(*args) : \n",
+    "    for i in args : \n",
+    "        print(i ,end=' ')\n",
+    "    print()   \n",
+    "    \n",
+    "print_numbers(1,2,3,4)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name : hardik\n",
+      "age : 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keyword arguments\n",
+    "\n",
+    "def print_details(**kwargs) : \n",
+    "    for key, value in kwargs.items() : \n",
+    "        print(f\"{key} : {value}\")\n",
+    "\n",
+    "print_details(name = \"hardik\", age=\"21\")        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 \n",
+      "name : Hardik\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_details(*args, **kwargs) :\n",
+    "    for i in args : \n",
+    "        print(i ,end=' ')\n",
+    "    print()   \n",
+    "    for key, value in kwargs.items() : \n",
+    "        print(f\"{key} : {value}\")\n",
+    "\n",
+    "print_details(1,2,3,name=\"Hardik\")        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_strong_password(password) : \n",
+    "    if len(password) < 8:\n",
+    "        return False\n",
+    "    if not any(char.isdigit() for char in password):\n",
+    "        return False\n",
+    "    if not any(char.islower()  for char in password):\n",
+    "        return False \n",
+    "    if not any(char.isupper() for char in password) :\n",
+    "        return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### lambda functions\n",
+    "\n",
+    "* lambda function are small anonymous functions.\n",
+    "* they can have any number of arguments but only one expression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addition = lambda a,b : a + b\n",
+    "addition(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# map() : applies functions to all items in a list\n",
+    "\n",
+    "numbers = [1,2,3,4,5,6]\n",
+    "\n",
+    "square = list(map(lambda x : x**2, numbers))\n",
+    "square\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### map()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 7, 9]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# map multiple iterables\n",
+    "\n",
+    "numbers1 = [1,2,3]\n",
+    "numbers2 = [4,5,6]\n",
+    "\n",
+    "res = list(map(lambda x, y : x + y, numbers1, numbers2 ))\n",
+    "res\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to convert a list of strings into numbers\n",
+    "\n",
+    "nums = ['1', '2', '3', '4']\n",
+    "res = list(map(int, nums))\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['APPLE', 'BANANA', 'CHERRY']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = ['apple', 'banana', 'cherry']\n",
+    "\n",
+    "res = list(map(str.upper, words))\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hardik', 'Kaneki']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "people = [\n",
+    "    \n",
+    "    {'name' : \"Hardik\", 'age' : 21},\n",
+    "    {\"name\" : \"Kaneki\", 'age' : 23}\n",
+    "]\n",
+    "\n",
+    "res = list(map(lambda x : x['name'], people))  # extract names\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### filter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [1,2,3,4,5,6,7,8,9]\n",
+    "\n",
+    "res = list(filter(lambda x : x %2 ==0, lst) )\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hardik', 'age': 21}, {'name': 'Kaneki', 'age': 23}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## filter objects with age >= 20\n",
+    "\n",
+    "people = [\n",
+    "    \n",
+    "    {'name' : \"Hardik\", 'age' : 21},\n",
+    "    {\"name\" : \"Kaneki\", 'age' : 23},\n",
+    "     {'name' : \"Eren\", 'age' : 19},\n",
+    "]\n",
+    "\n",
+    "\n",
+    "res= list(filter(lambda x : x['age'] >= 20, people))\n",
+    "res"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
