--- a/python/3-modules-file-and-exception-handling/code.ipynb
+++ b/python/3-modules-file-and-exception-handling/code.ipynb
@@ -786,6 +786,241 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exceptions\n",
+    "\n",
+    "Exceptions are events that disrupt the normal flow of a program. They occur when an error is encountered during program execution. Common exceptions include:\n",
+    "\n",
+    "* ZeroDivisionError : Dividing by zero.\n",
+    "* FileNotFoundError : File not found.\n",
+    "* ValueError : Invalid value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No such variable\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a=b\n",
+    "except:\n",
+    "    print(\"No such variable\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'b' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a = b\n",
+    "except NameError as ex:\n",
+    "    print(ex)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    result = 1/0\n",
+    "except ZeroDivisionError as ex:\n",
+    "    print(ex)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'b' is not defined\n",
+      "Main Exception got caught here\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    result = 1/2\n",
+    "    a=b\n",
+    "except ZeroDivisionError as ex:\n",
+    "    print(ex)  \n",
+    "except Exception as ex1 :   \n",
+    "    print(ex1)   \n",
+    "    print(\"Main Exception got caught here\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Denom is zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    num = int(input(\"Enter a number\"))\n",
+    "    result = 10/num\n",
+    "    print(result)\n",
+    "except ValueError :\n",
+    "    print(\"Not a valid number\")\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Denom is zero\") \n",
+    "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result is 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try, except , else block\n",
+    "\n",
+    "try:\n",
+    "    num = int(input(\"Enter a number\"))\n",
+    "    result = 10/num\n",
+    "except ValueError :\n",
+    "    print(\"Not a valid number\")\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Denom is zero\") \n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "else:\n",
+    "    print(f\"Result is {result}\")              \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result is 1.0\n",
+      "Will be executed no matter what.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try, except , else and finally\n",
+    "\n",
+    "try:\n",
+    "    num = int(input(\"Enter a number\"))\n",
+    "    result = 10/num\n",
+    "except ValueError :\n",
+    "    print(\"Not a valid number\")\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Denom is zero\") \n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "else:\n",
+    "    print(f\"Result is {result}\")      \n",
+    "finally :\n",
+    "    print(\"Will be executed no matter what.\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "This is a new line\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# file handling and machine handling\n",
+    "\n",
+    "try:\n",
+    "    file = open(\"example.txt\", 'r')\n",
+    "    content =file.read()\n",
+    "    print(content)\n",
+    "except FileNotFoundError :\n",
+    "    print(\"File does not exist\")\n",
+    "finally:\n",
+    "    if 'file' in locals()  or not file.closed :   # locals() returns a dict containing the local variables\n",
+    "        file.close() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__name__', '__doc__', '__package__', '__loader__', '__spec__', '__builtin__', '__builtins__', '_ih', '_oh', '_dh', 'In', 'Out', 'get_ipython', 'exit', 'quit', 'open', '_', '__', '___', '__vsc_ipynb_file__', '_i', '_ii', '_iii', '_i1', '_i2', '_i3', '_i4', '_i5', '_i6', '_i7', '_i8', '_i9', '_i10', '_i11', '_i12', '_i13', '_i14', '_i15', '_i16', 'result', '_i17', 'num', '_i18', '_i19', '_i20', '_i21', '_i22', '_i23', '_i24', '_i25', '_i26', '_i27', '_i28', '_i29', 'file', 'content', '_i30', '_i31', '_i32', '_32', '_i33', '_i34', '_34', '_i35', '_35', '_i36', '_36', '_i37', '_37', '_i38', '_38', '_i39', '_i40']\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open('example.txt')\n",
+    "lst = list(locals().keys())\n",
+    "file.close()\n",
+    "print(lst)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
