--- a/python/4-OOPS/code.ipynb
+++ b/python/4-OOPS/code.ipynb
@@ -365,13 +365,180 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "## Polymorphism\n",
+    "\n",
+    "Method overriding allows a child class to provide a specific implementation of a method that is already defined in its parent class.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\n",
+      "Meow!\n",
+      "Woof!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Method Overriding\n",
+    "\n",
+    "# Base class\n",
+    "\n",
+    "class Animal:\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        return \"Sound of the animal\"\n",
+    "    \n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Woof!\"\n",
+    "    \n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Meow!\"  \n",
+    "    \n",
+    "    \n",
+    "# function that demonstrates polymorphism     \n",
+    "\n",
+    "def animal_speak(animal):\n",
+    "    print(animal.speak())\n",
+    "     \n",
+    "    \n",
+    "dog = Dog()  \n",
+    "cat = Cat()\n",
+    "\n",
+    "print(dog.speak())\n",
+    "print(cat.speak())  \n",
+    "animal_speak(dog)\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area is 12\n",
+      "The area is 28.26\n"
+     ]
+    }
+   ],
+   "source": [
+    "### polymorphism with functions and methods\n",
+    "\n",
+    "# Base Class\n",
+    "\n",
+    "class Shape :\n",
+    "    def area(self):\n",
+    "        return \"The area of the figure\"\n",
+    "    \n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "    def area(self):\n",
+    "        return self.width * self.height     \n",
+    "    \n",
+    "    \n",
+    "class Circle(Shape):\n",
+    "    \n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "    \n",
+    "    def area(self):\n",
+    "        return 3.14 * (self.radius **2)  \n",
+    "    \n",
+    "    \n",
+    "# function that demonstrates polymorphism\n",
+    "\n",
+    "def print_area(shape):\n",
+    "    print(f\"The area is {shape.area()}\")\n",
+    "    \n",
+    "    \n",
+    "rectangle = Rectangle(3,4)\n",
+    "circle = Circle(3)\n",
+    "\n",
+    "print_area(rectangle)\n",
+    "print_area(circle)    \n",
+    "         \n",
+    "               "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* In python, Interface === Abstract Base Class\n",
+    "\n",
+    "\n",
+    "Abstract Base Classes (ABCs) are used to define common methods for a group of related objects. They can enforce that derived classes implement particular methods, promoting consistency across different implementations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bike engine started'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "# abstract class\n",
+    "class Vehicle(ABC):\n",
+    "    @abstractmethod\n",
+    "    def start_engine(self):\n",
+    "        pass\n",
+    "    \n",
+    "# derived class 1\n",
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        return \"Car Engine started\" \n",
+    "    \n",
+    "# derived class 2\n",
+    "\n",
+    "class Motorcycle(Vehicle):\n",
+    "    \n",
+    "    def start_engine(self):\n",
+    "        return \"Bike engine started\"\n",
+    "    def run(self):\n",
+    "        return \"Vroom!\"  \n",
+    "    \n",
+    "bike = Motorcycle()\n",
+    "\n",
+    "bike.start_engine()\n",
+    "         \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
