encapsulation and abstraction done

--- a/python/4-OOPS/code.ipynb
+++ b/python/4-OOPS/code.ipynb
@@ -538,6 +538,350 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Encapsulation\n",
+    "\n",
+    "* It is the concept of wrapping data (variables) and method (functions) together as a single unit. It restricts direct access to some of the object's components, which is a means of preventing accidental interference and misuse of data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hardik'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Encapsulation with getter and setter methods\n",
+    "\n",
+    "## public , protected and private variables or access modifiers\n",
+    "\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name   # public variables\n",
+    "        self.age = age\n",
+    "        \n",
+    "person = Person('Hardik', 21)\n",
+    "\n",
+    "person.name        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'age',\n",
+       " 'name']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(person)   # name , age will be visible here as they are public\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, age, gender):\n",
+    "        self.__name = name   # private variables  (using double '_' variables become private)\n",
+    "        self.__age = age\n",
+    "        self.gender = gender\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_Person__age',\n",
+       " '_Person__name',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'gender']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person = Person('Hardik', 21, 'Male')\n",
+    "dir(person)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Person' object has no attribute '__name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mperson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__name\u001b[49m   \u001b[38;5;66;03m# cannot access name\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Person' object has no attribute '__name'"
+     ]
+    }
+   ],
+   "source": [
+    "person.__name   # cannot access name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# protected variables\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name, age, gender):\n",
+    "        self._name = name   # protected variables  (using single '_' variables become protected)\n",
+    "        self._age = age\n",
+    "        self.gender = gender   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_age',\n",
+       " '_name',\n",
+       " 'gender']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person = Person('Hardik', 21, \"Male\")\n",
+    "dir(person)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hardik\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee(Person):\n",
+    "    def __init__(self, name, age, gender, id):\n",
+    "        super().__init__(name, age, gender)\n",
+    "        self.id = id\n",
+    "    def get_name(self):\n",
+    "        return self._name\n",
+    "    \n",
+    "emp = Employee(\"Hardik\", '21', \"Male\", '232423') \n",
+    "print(emp.get_name())    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# encapsulation with getter and setter \n",
+    "\n",
+    "class Person :\n",
+    "    def __init__(self, name, age):\n",
+    "        self.__name= name  # private variables\n",
+    "        self.__age =age\n",
+    "        \n",
+    "    ## getter method for name\n",
+    "    def get_name(self):\n",
+    "        return self.__name\n",
+    "    \n",
+    "    ## setter method for name\n",
+    "    def set_name(self, name):\n",
+    "        self.__name = name\n",
+    "        \n",
+    "    def get_age(self):\n",
+    "        return self.__age\n",
+    "    def set_age(self, age):\n",
+    "        self.__age = age    \n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Abstraction\n",
+    "\n",
+    "Abstraction is the concept of hiding the complex implementation details and showing only the necessary features of an object. This helps in reducing programming complexity and effort."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car Engine Started\n",
+      "Car is being driven\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "## Abstract base class\n",
+    "\n",
+    "class Vehicle(ABC):\n",
+    "    def drive(self):\n",
+    "        print(\"Car is being driven\")\n",
+    "    @abstractmethod\n",
+    "    def start(self):\n",
+    "        pass\n",
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def start(self):\n",
+    "        print(\"Car Engine Started\")    \n",
+    "       \n",
+    "car = Car()\n",
+    "car.start()\n",
+    "car.drive()       \n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
