--- a/python/4-OOPS/code.ipynb
+++ b/python/4-OOPS/code.ipynb
@@ -878,6 +878,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Magic Methods\n",
+    "\n",
+    "Magic methods in python, also known as dunder methods (double underscore methods), are special methods that start and end with double underscores. These methods enable you to define the behavior of objects for built-in operations, such as arithmetic operations, comparisons, and more. \n",
+    "\n",
+    "Magic methods are predefined methods in python that you can override to change the behavior of your objects. Some common magic methods include :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\n __init__ : initialize a new instance of a class.\\n __str__ : returns a string representation of an object.\\n __repr__ : returns an official string representation of an object.\\n __len__ : returns th length of an object.\\n __getitem__ : gets an item from a container.\\n __setitem__ : sets an item in a container\\n\\n'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "''' \n",
+    " __init__ : initialize a new instance of a class.\n",
+    " __str__ : returns a string representation of an object.\n",
+    " __repr__ : returns an official string representation of an object.\n",
+    " __len__ : returns th length of an object.\n",
+    " __getitem__ : gets an item from a container.\n",
+    " __setitem__ : sets an item in a container\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name : Hardik , age : 21\n",
+      "Person(name=Hardik, age=21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## basics magic methods\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name =name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return  f\"name : {self.name} , age : {self.age}\"\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Person(name={self.name}, age={self.age})\"\n",
+    "        \n",
+    "        \n",
+    "person = Person('Hardik', 21)     \n",
+    "print(person) \n",
+    "print(repr(person))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
