--- a/python/4-OOPS/code.ipynb
+++ b/python/4-OOPS/code.ipynb
@@ -951,6 +951,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operator Overloading\n",
+    "\n",
+    "Operator overloading allows you to define the behavior of operators(+, - ,*  etc) for custom objects. You achieve this yb overriding specific magic methods in your class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n__add__(self, other) : adds two objects using the + operator\\n\\n__sub__(self, other) : subtracts two objects using the - operator.\\n\\n__mul__(self, other)  : multiplies tow objects using the * operator.\\n\\n___truediv__(self, other): divides two objects using the / operator.\\n\\n__eq__(self, other) : checks if two objects are equal using the == operator.\\n\\n__lt__(self, other) : checks if one object is less than another using the < operator.\\n\\n\\n'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### common operator overloading magic methods\n",
+    "\n",
+    "'''\n",
+    "__add__(self, other) : adds two objects using the + operator\n",
+    "\n",
+    "__sub__(self, other) : subtracts two objects using the - operator.\n",
+    "\n",
+    "__mul__(self, other)  : multiplies tow objects using the * operator.\n",
+    "\n",
+    "___truediv__(self, other): divides two objects using the / operator.\n",
+    "\n",
+    "__eq__(self, other) : checks if two objects are equal using the == operator.\n",
+    "\n",
+    "__lt__(self, other) : checks if one object is less than another using the < operator.\n",
+    "\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector(x=11, y=22)\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vector:\n",
+    "    def __init__(self, x,y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return Vector(self.x + other.x , self.y + other.y)\n",
+    "    \n",
+    "    def __sub__(self, other):\n",
+    "        return Vector(self.x - other.x , self.y - other.y)\n",
+    "    \n",
+    "    def __mul__(self, other):\n",
+    "        return Vector(self.x * other.x , self.y * other.y)\n",
+    "        \n",
+    "    def __eq__(self, other):\n",
+    "        return self.x==other.x and self.y == other.y\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Vector(x={self.x}, y={self.y})\"\n",
+    "    \n",
+    "v1 = Vector(1,2)\n",
+    "v2 = Vector(10,20)\n",
+    "\n",
+    "print(v1 + v2)  \n",
+    "print(Vector(1,2) == Vector(1,2))      \n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
