--- a/python/4-OOPS/code.ipynb
+++ b/python/4-OOPS/code.ipynb
@@ -1039,6 +1039,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Exception (Raise and Throw an exception)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Error(Exception):\n",
+    "    pass\n",
+    "\n",
+    "class dobException(Error):\n",
+    "    pass "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry, your age should be greater than 20 or less than 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = int(input(\"Enter the dob\"))\n",
+    "age = 2024 - year\n",
+    "\n",
+    "try:\n",
+    "    if age <= 30 and age >=20:\n",
+    "        print(\"Valid Age\")\n",
+    "    else :\n",
+    "        raise dobException()\n",
+    "except dobException:\n",
+    "    print(\"Sorry, your age should be greater than 20 or less than 30\")        \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
